--- a/templates/default/templates.cfg.erb
+++ b/templates/default/templates.cfg.erb
@@ -50,6 +50,20 @@ define host {
   register                0
 }
 
+# no check command for virtual hosts
+define host {
+  name                    virtual-server
+  use                     default-host
+  check_period            24x7
+  check_interval          <%= icinga_interval(icinga_attr(:default_host)[:check_interval]) %>
+  retry_interval          <%= icinga_interval(icinga_attr(:default_host)[:retry_interval]) %>
+  max_check_attempts      <%= icinga_attr(:default_host)[:max_check_attempts] %>
+  notification_interval   <%= icinga_interval(icinga_attr(:default_host)[:notification_interval]) %>
+  notification_options    d,u,r
+  contact_groups          <%= icinga_attr(:default_contact_groups).join(",") %>
+  register                0
+}
+
 define service {
   name                            default-service
   active_checks_enabled           1
